# zkp-auth

./: Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  build.rs  compose.yaml
db/: dump.scdb  index.iscdb
proto/: zkp_auth.proto
scripts/: copy_binaries.sh
src/: client.rs  logger.rs  main.rs  params.rs  server.rs  utils.rs  zkp_auth.rs
