[package]
name = "zkp-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
num = "0.4.0"
tonic = "0.9.2"
scdb = "0.2.1"
rpassword = "7.2.0"
tokio = { version = "1.32.0", features = ["full"] }
mod_exp = "1.0.1"
prost = "0.11.8"

[build-dependencies]
tonic-build = "0.8.4"
